2004/03/03 00:35 (+0100) kaffeetisch

	* t/GtkFileChooser.t: Change the TODOs into SKIPs -- the bugs have
	been fixed in 2.3.5.

	* t/GtkDnd.t
	* xs/GtkDnd.xs: Bind and test drag_source_[sg]et_target_list.

	* t/GtkFileChooserDialog.t: Only test new_with_backend on versions
	that have it.

	* xs/GtkFileChooserDialog.xs: Add version guards around the
	file-system-backend property.

	* t/GtkFileChooserWidget.t
	* xs/GtkFileChooserWidget.xs: Bind and test new_with_backend.

	* t/01.GtkWindow.t
	* xs/GtkWindow.xs: Bind and test propagate_key_event.

	* t/PangoLayout.t
	* xs/PangoLayout.xs: Bind and test [sg]et_auto_dir.

2004/03/01 13:57 (-0500) rwmcfa1

	* examples/file_chooser.pl: updated uri's to non-muppet specific 
	directories so that example won't fail. it's uses $ENV{HOME} and /tmp/

2004/03/01 19:55 (+0100) kaffeetisch

	* t/GtkEntry.t
	* xs/GtkEntry.xs: Bind and test [sg]et_alignment.

	* t/01.GtkWindow.t
	* xs/GtkWindow.xs: Bind and test activate_key.

2004/03/01 02:24 (-0500) muppetman

	* xs/GdkPixmap.xs: bad signature in pod

	* xs/GtkCellRenderer.xs: hide deprecated warnings unless env var
	GTK2PERL_DEBUG is set and true.

2004/03/01 02:05 (-0500) muppetman

	* t/GdkDnd.t: make the test not fail when the destination window
	doesn't exist.

	* t/GdkEvent.t: some settings don't exist if you're not running
	gnome, e.g., remote to non-gnome desktop; don't fail if the setting
	isn't there.

	* xs/GdkDnd.xs: if find_window returns no destination window, the
	protocol is garbage; don't try to convert it to a protocol enum
	value.  this is half of the fix for the bizarre test problem
	were seeing in t/GdkDnd.t

2004/03/01 04:51 (+0100) kaffeetisch

	* t/GtkFileChooser.t: Rearrange some function calls to avoid
	warnings.  Expect that set_current_name doesn't care about the
	existance of the file and adjust the test accordingly.

2004/03/01 03:50 (+0100) kaffeetisch

	A t/GtkTreeModelIface.t: New test for the custom tree model stuff.
